Attempt at fix of uneven tiles on homepage
Added min-height tag for class "tile-frontpage", wrapped in an @media
query to only fire when the screen is wider than 992px (the boostrap md
breakpoint).

There are two things I'm not satisfied with about this fix:
    1.  It is still dependent on content: if we ever expand the text
        inside the boxes, we will need to edit the css to allow for
        larger boxes. This feels like a violation of the promise of
        markup languages.
    2.  I used min-width: 992px in the media query. Bootstrap's dev
        page explicitly uses "@screen-md-width". I'm not sure if
        that's something we can do ourselves, but I'd prefer not to
        be blindsided in the future by some change to bootstrap.

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -495,6 +495,12 @@ a.nivo-prevNav { right: 33px; }
     top: -4px;
     width: 82px;
 }
+@media (min-width: 992px) {
+    .tile.tile-frontpage{
+        min-height:330px
+    }
+}
+
 .tile p { margin: 10px 0 22px 0;  font: 13px/22px 'Lato', sans-serif;}
 .tile-image { height: 100px; margin: 25px 0 15px; vertical-align: bottom; }
 .tile-title { font-size: 18px; margin: 0; }
